Reduce shutdown poll interval in test clusters (#661)
Today in TestClusters tests we time out a graceful shutdown after 20s,
but the poll interval is fixed at 60s, so we only check for shutdown
readiness once before giving up. This commit makes the poll interval
configurable, and defaults it to 1s in these tests.